--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <h3 class="info-title">SKILLS</h3>
                     <ul class="info-list">
                         <li class="info"><strong>Language: </strong>English (intermediate)</li>
-                        <li class="info"><strong>Technique:</strong> C\C++, Python, Bash, Git, Linux</li>
+                        <li class="info"><strong>Technique:</strong> C/C++, Python, Bash, Git, Automake</li>
+                        <li class="info"><strong>Operating system:</strong> Linux, Windows</li>
                         <li class="info"><strong>Soft skills:</strong> self-taught, communication, hard-working</li>
                     </ul>
                 </div>
