--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class="info-list">
                         <li class="info"><strong>Language: </strong>English (intermediate)</li>
                         <li class="info"><strong>Technique:</strong> C/C++, Python, Bash, Git</li>
-                        <li class="info"><strong>Operating system:</strong> Linux, Windows</li>
+                        <li class="info"><strong>OS:</strong> Linux, Windows</li>
                         <li class="info"><strong>Soft skills:</strong> self-taught, communication, hard-working</li>
                     </ul>
                 </div>
