--- a/index.html
+++ b/index.html
@@ -77,10 +77,18 @@
                 <div class="projects">
                     <h3 class="info-title">PET PROJECT</h3>
                     <div class="project">  
-                        <h4 class="project-title">Fast Super-Resolution using CNN (FSRCNN)</h4>
+                        <h4 class="project-title">C++ command-line system information tool (cppneofetch)</h4>
+                        <ul class="info-list">
+                            <li class="info"><strong>Usage:</strong> Show system information on terminal</li>
+                            <li class="info"><strong>Technology:</strong> Automake, x11, Linux</li>
+                        </ul>
+                    </div>
+
+                    <div class="project">  
+                        <h4 class="project-title">Super-Resolution using Reinforcement learning (PixelRL-SR)</h4>
                         <ul class="info-list">
                             <li class="info"><strong>Usage:</strong> Increase image’s resolution</li>
-                            <li class="info"><strong>Technology:</strong> Tensorflow, Pytorch, Numpy</li>
+                            <li class="info"><strong>Technology:</strong> Pytorch, Numpy</li>
                         </ul>
                     </div>
                     <div class="project">  
@@ -91,20 +99,13 @@
                         </ul>
                     </div>
                     <div class="project">  
-                        <h4 class="project-title">Super-Resolution using reinforcement learning</h4>
+                        <h4 class="project-title">Fast Super-Resolution using CNN (FSRCNN)</h4>
                         <ul class="info-list">
                             <li class="info"><strong>Usage:</strong> Increase image’s resolution</li>
-                            <li class="info"><strong>Technology:</strong> Pytorch, Numpy</li>
+                            <li class="info"><strong>Technology:</strong> Tensorflow, Pytorch, Numpy</li>
                         </ul>
                     </div>
-                    <div class="project">  
-                        <h4 class="project-title">C++ command-line system information tool (cppneofetch)</h4>
-                        <ul class="info-list">
-                            <li class="info"><strong>Usage:</strong> Show system information on terminal</li>
-                            <li class="info"><strong>Technology:</strong> Automake, x11, Linux</li>
-                        </ul>
-                    </div>
-                    
+
                 </div>
                 <div class="education">
                     <h3 class="info-title">EDUCATION</h3>
